Boques se imprimen y selectores funcionan.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@tabler/icons": "^2.42.0",
     "axios": "^1.6.2",
-    "flowbite": "^2.2.0"
+    "flowbite": "^2.2.0",
+    "uuid": "^9.0.1"
   }
 }
