--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons": "^2.42.0",
     "axios": "^1.6.2",
     "flowbite": "^2.2.0",
+    "lodash": "^4.17.21",
     "uuid": "^9.0.1"
   }
 }
