--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.6.2",
     "flowbite": "^2.2.0",
     "lodash": "^4.17.21",
+    "sticky-js": "^1.3.0",
+    "stickybits": "^3.7.11",
     "uuid": "^9.0.1"
   }
 }
