--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tabler/icons": "^2.42.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "flowbite": "^2.2.0",
     "jspdf": "^2.5.1",
